# junior_aladdin_v2-0

./: .env.example  .gitignore  BRUTAL_DEEP_SCAN_ANALYSIS.txt  FLOOR_3_DETAILED_ANALYSIS_vs_ROADMAP.txt  PROJECT_AUDIT_ANALYSIS_REPORT.txt  README.md  pyproject.toml  requirements.txt  setup.py  start_system.bat  test_e2e_f3.py
Plan, Roadmap and etc/Plans/: FLOOR_01_MARKET_CONNECTION_V1_1_FINAL.txt  FLOOR_02_DATA_CENTER_V1_1_FINAL.txt  FLOOR_03_CALCULATION_ENGINES_V1_1_FINAL.txt  FLOOR_04_DEPARTMENT_HEADS_V1_2_FINAL.txt  FLOOR_05_CAPTAIN_V2_2_FINAL.txt  IMPLEMENTATION_SEQUENCING_PLAN_V1_1_FINAL.txt  MASTER_ASSEMBLY_PLAN_V1_1_FINAL.txt  SIDE_A_EXECUTION_V1_1_FINAL.txt  SIDE_B_DASHBOARD_V1_2_FINAL.txt  SIDE_C_MEMORY_JOURNAL_V1_1_FINAL.txt
Plan, Roadmap and etc/Roadmaps/: ROADMAP_DEPLOYMENT_AND_OPERATIONS.txt  ROADMAP_FLOOR_01.txt  ROADMAP_FLOOR_02.txt  ROADMAP_FLOOR_03.txt  ROADMAP_FLOOR_04.txt  ROADMAP_FLOOR_05.txt  ROADMAP_FULL_SYSTEM_INTEGRATION.txt  ROADMAP_MASTER.txt  ROADMAP_PHASE_0_FOUNDATION.txt  ROADMAP_SIDE_A.txt  ROADMAP_SIDE_B.txt  ROADMAP_SIDE_C.txt  ROADMAP_SUMMARY_ALL.txt  ROADMAP_TESTING_AND_VALIDATION.txt
config/: default.yaml  production.yaml  test.yaml
junior_aladdin/: system_runner.py
junior_aladdin/floor_1_connection/: __init__.py  auth_manager.py  feed_adapters.py  floor2_handoff.py  ingress_router.py  manual_ingress.py  packet_envelope.py  shared_utils.py  source_adapters.py  source_health.py
scripts/: run_all_tests.sh  seed_test_data.py  setup.sh  smoke_test_captain.py
tests/: conftest.py  test_imports.py  test_shared_types.py
(+352 files in other folders)
