[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "junior-aladdin"
version = "0.1.0"
description = "NIFTY 50 auto market-observation + trading system"
authors = [
    { name = "Junior Aladdin Operator" },
]
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "smartapi-python>=1.2.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
